// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sunburst Chart > render a sunburst with single category 1`] = `
{
  "accessibility": {
    "enabled": false,
  },
  "boost": {
    "useGPUTranslations": true,
    "usePreAllocated": true,
  },
  "chart": {
    "alignTicks": false,
    "animation": {
      "duration": 300,
    },
    "backgroundColor": "#FFFFFF",
    "events": {
      "drilldown": [Function],
      "redraw": [Function],
    },
    "polar": false,
    "spacing": [
      20,
      20,
      20,
      20,
    ],
    "type": "sunburst",
  },
  "drilldown": {
    "activeDataLabelStyle": {
      "color": "#000000",
    },
    "breadcrumbs": {
      "buttonTheme": {
        "fill": "#ffcb05",
        "states": {
          "hover": {
            "fill": "#f2b900",
            "stroke": "#f2b900",
          },
        },
        "stroke": "#ffcb05",
        "style": {
          "color": "#3a4356",
        },
      },
    },
  },
  "legend": {
    "align": "center",
    "backgroundColor": "transparent",
    "borderColor": "transparent",
    "borderWidth": 0,
    "enabled": true,
    "itemStyle": {
      "color": "#000000",
      "fontFamily": ""Open Sans","Roboto","Helvetica","Arial",sans-serif",
      "fontSize": "13px",
      "fontWeight": "normal",
      "pointerEvents": "auto",
      "textOutline": "none",
    },
    "layout": "horizontal",
    "symbolRadius": 0,
    "verticalAlign": "bottom",
  },
  "plotOptions": {
    "series": {
      "animation": {
        "duration": 600,
      },
      "dataLabels": {
        "style": {
          "color": "#000000",
          "fontFamily": ""Open Sans","Roboto","Helvetica","Arial",sans-serif",
        },
      },
      "point": {
        "events": {
          "click": [Function],
        },
      },
    },
    "sunburst": {
      "events": {
        "legendItemClick": [Function],
      },
    },
  },
  "series": [
    {
      "borderWidth": 0,
      "data": [
        {
          "custom": {
            "level": 0,
            "levelsCount": 1,
          },
          "id": "SUNBURST_ROOT_PARENT_ID",
          "name": "Quantity",
        },
        {
          "color": "rgb(10.196% 90.588% 100%)",
          "custom": {
            "blur": undefined,
            "level": 1,
            "levelsCount": 1,
            "rawValue": 936,
            "value": 936,
            "xCompareValue": [
              1514764800000,
            ],
            "xDisplayValue": [
              "2018",
            ],
            "xValue": [
              "2018-01-01T00:00:00.000Z",
            ],
          },
          "name": "2018",
          "parent": "SUNBURST_ROOT_PARENT_ID",
          "value": 936,
        },
        {
          "color": "rgb(8.8898% 86.166% 95.225%)",
          "custom": {
            "blur": undefined,
            "level": 1,
            "levelsCount": 1,
            "rawValue": 2045,
            "value": 2045,
            "xCompareValue": [
              1356998400000,
            ],
            "xDisplayValue": [
              "2013",
            ],
            "xValue": [
              "2013-01-01T00:00:00.000Z",
            ],
          },
          "name": "2013",
          "parent": "SUNBURST_ROOT_PARENT_ID",
          "value": 2045,
        },
        {
          "color": "rgb(7.5634% 81.786% 90.495%)",
          "custom": {
            "blur": undefined,
            "level": 1,
            "levelsCount": 1,
            "rawValue": 3010,
            "value": 3010,
            "xCompareValue": [
              1388534400000,
            ],
            "xDisplayValue": [
              "2014",
            ],
            "xValue": [
              "2014-01-01T00:00:00.000Z",
            ],
          },
          "name": "2014",
          "parent": "SUNBURST_ROOT_PARENT_ID",
          "value": 3010,
        },
        {
          "color": "rgb(6.2054% 77.449% 85.811%)",
          "custom": {
            "blur": undefined,
            "level": 1,
            "levelsCount": 1,
            "rawValue": 3056,
            "value": 3056,
            "xCompareValue": [
              1293840000000,
            ],
            "xDisplayValue": [
              "2011",
            ],
            "xValue": [
              "2011-01-01T00:00:00.000Z",
            ],
          },
          "name": "2011",
          "parent": "SUNBURST_ROOT_PARENT_ID",
          "value": 3056,
        },
        {
          "color": "rgb(4.797% 73.157% 81.175%)",
          "custom": {
            "blur": undefined,
            "level": 1,
            "levelsCount": 1,
            "rawValue": 4242,
            "value": 4242,
            "xCompareValue": [
              1451606400000,
            ],
            "xDisplayValue": [
              "2016",
            ],
            "xValue": [
              "2016-01-01T00:00:00.000Z",
            ],
          },
          "name": "2016",
          "parent": "SUNBURST_ROOT_PARENT_ID",
          "value": 4242,
        },
        {
          "color": "rgb(3.3319% 68.912% 76.588%)",
          "custom": {
            "blur": undefined,
            "level": 1,
            "levelsCount": 1,
            "rawValue": 5447,
            "value": 5447,
            "xCompareValue": [
              1420070400000,
            ],
            "xDisplayValue": [
              "2015",
            ],
            "xValue": [
              "2015-01-01T00:00:00.000Z",
            ],
          },
          "name": "2015",
          "parent": "SUNBURST_ROOT_PARENT_ID",
          "value": 5447,
        },
        {
          "color": "rgb(2.0254% 64.715% 72.051%)",
          "custom": {
            "blur": undefined,
            "level": 1,
            "levelsCount": 1,
            "rawValue": 6814,
            "value": 6814,
            "xCompareValue": [
              1262304000000,
            ],
            "xDisplayValue": [
              "2010",
            ],
            "xValue": [
              "2010-01-01T00:00:00.000Z",
            ],
          },
          "name": "2010",
          "parent": "SUNBURST_ROOT_PARENT_ID",
          "value": 6814,
        },
        {
          "color": "rgb(0.9193% 60.567% 67.567%)",
          "custom": {
            "blur": undefined,
            "level": 1,
            "levelsCount": 1,
            "rawValue": 8103,
            "value": 8103,
            "xCompareValue": [
              1230768000000,
            ],
            "xDisplayValue": [
              "2009",
            ],
            "xValue": [
              "2009-01-01T00:00:00.000Z",
            ],
          },
          "name": "2009",
          "parent": "SUNBURST_ROOT_PARENT_ID",
          "value": 8103,
        },
        {
          "color": "rgb(0% 56.471% 63.137%)",
          "custom": {
            "blur": undefined,
            "level": 1,
            "levelsCount": 1,
            "rawValue": 8423,
            "value": 8423,
            "xCompareValue": [
              1325376000000,
            ],
            "xDisplayValue": [
              "2012",
            ],
            "xValue": [
              "2012-01-01T00:00:00.000Z",
            ],
          },
          "name": "2012",
          "parent": "SUNBURST_ROOT_PARENT_ID",
          "value": 8423,
        },
      ],
      "dataLabels": {
        "style": {
          "textOutline": "none",
        },
      },
      "levels": [
        {
          "color": "#FFFFFF",
          "dataLabels": {
            "className": "!csdk-overflow-visible",
            "enabled": true,
            "formatter": [Function],
            "useHTML": true,
          },
          "level": 1,
          "levelSize": {
            "unit": "percentage",
            "value": 80,
          },
        },
        {
          "dataLabels": {
            "enabled": false,
            "formatter": [Function],
            "useHTML": true,
          },
          "level": 2,
        },
      ],
      "name": "Root",
      "showInLegend": false,
      "turboThreshold": 2000,
      "type": "sunburst",
    },
    {
      "color": "#00cee6",
      "data": [],
      "name": "Years",
      "showInLegend": true,
      "states": {
        "hover": {
          "enabled": false,
        },
      },
    },
  ],
  "title": {
    "text": null,
  },
  "tooltip": {
    "animation": false,
    "backgroundColor": "#FFFFFF",
    "borderColor": "#CCCCCC",
    "borderRadius": 10,
    "borderWidth": 1,
    "formatter": [Function],
    "outside": true,
    "padding": 1,
    "style": {
      "fontFamily": ""Open Sans","Roboto","Helvetica","Arial",sans-serif",
    },
    "useHTML": true,
  },
  "xAxis": undefined,
  "yAxis": undefined,
}
`;

exports[`Sunburst Chart > render a sunburst with two categories 1`] = `
{
  "accessibility": {
    "enabled": false,
  },
  "boost": {
    "useGPUTranslations": true,
    "usePreAllocated": true,
  },
  "chart": {
    "alignTicks": false,
    "animation": {
      "duration": 300,
    },
    "backgroundColor": "#FFFFFF",
    "events": {
      "drilldown": [Function],
      "redraw": [Function],
    },
    "polar": false,
    "spacing": [
      20,
      20,
      20,
      20,
    ],
    "type": "sunburst",
  },
  "drilldown": {
    "activeDataLabelStyle": {
      "color": "#000000",
    },
    "breadcrumbs": {
      "buttonTheme": {
        "fill": "#ffcb05",
        "states": {
          "hover": {
            "fill": "#f2b900",
            "stroke": "#f2b900",
          },
        },
        "stroke": "#ffcb05",
        "style": {
          "color": "#3a4356",
        },
      },
    },
  },
  "legend": {
    "align": "center",
    "backgroundColor": "transparent",
    "borderColor": "transparent",
    "borderWidth": 0,
    "enabled": true,
    "itemStyle": {
      "color": "#000000",
      "fontFamily": ""Open Sans","Roboto","Helvetica","Arial",sans-serif",
      "fontSize": "13px",
      "fontWeight": "normal",
      "pointerEvents": "auto",
      "textOutline": "none",
    },
    "layout": "horizontal",
    "symbolRadius": 0,
    "verticalAlign": "bottom",
  },
  "plotOptions": {
    "series": {
      "animation": {
        "duration": 600,
      },
      "dataLabels": {
        "style": {
          "color": "#000000",
          "fontFamily": ""Open Sans","Roboto","Helvetica","Arial",sans-serif",
        },
      },
      "point": {
        "events": {
          "click": [Function],
        },
      },
    },
    "sunburst": {
      "events": {
        "legendItemClick": [Function],
      },
    },
  },
  "series": [
    {
      "borderWidth": 0,
      "data": [
        {
          "custom": {
            "level": 0,
            "levelsCount": 2,
          },
          "id": "SUNBURST_ROOT_PARENT_ID",
          "name": "Quantity",
        },
        {
          "color": "rgb(10.196% 90.588% 100%)",
          "custom": {
            "level": 1,
            "levelsCount": 2,
            "rawValues": [
              "2018-01-01T00:00:00.000Z",
            ],
            "subtotalValue": 936,
            "xValues": [
              "2018",
            ],
          },
          "id": "2018-01-01T00:00:00.000Z",
          "name": "2018",
          "parent": "SUNBURST_ROOT_PARENT_ID",
        },
        {
          "color": "rgb(8.8898% 86.166% 95.225%)",
          "custom": {
            "level": 1,
            "levelsCount": 2,
            "rawValues": [
              "2013-01-01T00:00:00.000Z",
            ],
            "subtotalValue": 2045,
            "xValues": [
              "2013",
            ],
          },
          "id": "2013-01-01T00:00:00.000Z",
          "name": "2013",
          "parent": "SUNBURST_ROOT_PARENT_ID",
        },
        {
          "color": "rgb(7.5634% 81.786% 90.495%)",
          "custom": {
            "level": 1,
            "levelsCount": 2,
            "rawValues": [
              "2014-01-01T00:00:00.000Z",
            ],
            "subtotalValue": 3010,
            "xValues": [
              "2014",
            ],
          },
          "id": "2014-01-01T00:00:00.000Z",
          "name": "2014",
          "parent": "SUNBURST_ROOT_PARENT_ID",
        },
        {
          "color": "rgb(6.2054% 77.449% 85.811%)",
          "custom": {
            "level": 1,
            "levelsCount": 2,
            "rawValues": [
              "2011-01-01T00:00:00.000Z",
            ],
            "subtotalValue": 3056,
            "xValues": [
              "2011",
            ],
          },
          "id": "2011-01-01T00:00:00.000Z",
          "name": "2011",
          "parent": "SUNBURST_ROOT_PARENT_ID",
        },
        {
          "color": "rgb(4.797% 73.157% 81.175%)",
          "custom": {
            "level": 1,
            "levelsCount": 2,
            "rawValues": [
              "2016-01-01T00:00:00.000Z",
            ],
            "subtotalValue": 4242,
            "xValues": [
              "2016",
            ],
          },
          "id": "2016-01-01T00:00:00.000Z",
          "name": "2016",
          "parent": "SUNBURST_ROOT_PARENT_ID",
        },
        {
          "color": "rgb(3.3319% 68.912% 76.588%)",
          "custom": {
            "level": 1,
            "levelsCount": 2,
            "rawValues": [
              "2015-01-01T00:00:00.000Z",
            ],
            "subtotalValue": 5447,
            "xValues": [
              "2015",
            ],
          },
          "id": "2015-01-01T00:00:00.000Z",
          "name": "2015",
          "parent": "SUNBURST_ROOT_PARENT_ID",
        },
        {
          "color": "rgb(2.0254% 64.715% 72.051%)",
          "custom": {
            "level": 1,
            "levelsCount": 2,
            "rawValues": [
              "2010-01-01T00:00:00.000Z",
            ],
            "subtotalValue": 6814,
            "xValues": [
              "2010",
            ],
          },
          "id": "2010-01-01T00:00:00.000Z",
          "name": "2010",
          "parent": "SUNBURST_ROOT_PARENT_ID",
        },
        {
          "color": "rgb(0.9193% 60.567% 67.567%)",
          "custom": {
            "level": 1,
            "levelsCount": 2,
            "rawValues": [
              "2009-01-01T00:00:00.000Z",
            ],
            "subtotalValue": 8103,
            "xValues": [
              "2009",
            ],
          },
          "id": "2009-01-01T00:00:00.000Z",
          "name": "2009",
          "parent": "SUNBURST_ROOT_PARENT_ID",
        },
        {
          "color": "rgb(0% 56.471% 63.137%)",
          "custom": {
            "level": 1,
            "levelsCount": 2,
            "rawValues": [
              "2012-01-01T00:00:00.000Z",
            ],
            "subtotalValue": 8423,
            "xValues": [
              "2012",
            ],
          },
          "id": "2012-01-01T00:00:00.000Z",
          "name": "2012",
          "parent": "SUNBURST_ROOT_PARENT_ID",
        },
        {
          "color": "rgb(42.353% 42.353% 59.216%)",
          "custom": {
            "blur": undefined,
            "level": 2,
            "levelsCount": 2,
            "rawValue": 8103,
            "value": 8103,
            "xCompareValue": [
              1230768000000,
              "A",
            ],
            "xDisplayValue": [
              "2009",
              "A",
            ],
            "xValue": [
              "2009-01-01T00:00:00.000Z",
              "A",
            ],
          },
          "name": "A",
          "parent": "2009-01-01T00:00:00.000Z",
          "value": 8103,
        },
        {
          "color": "rgb(42.353% 42.353% 59.216%)",
          "custom": {
            "blur": undefined,
            "level": 2,
            "levelsCount": 2,
            "rawValue": 6814,
            "value": 6814,
            "xCompareValue": [
              1262304000000,
              "A",
            ],
            "xDisplayValue": [
              "2010",
              "A",
            ],
            "xValue": [
              "2010-01-01T00:00:00.000Z",
              "A",
            ],
          },
          "name": "A",
          "parent": "2010-01-01T00:00:00.000Z",
          "value": 6814,
        },
        {
          "color": "rgb(77.647% 77.647% 100%)",
          "custom": {
            "blur": undefined,
            "level": 2,
            "levelsCount": 2,
            "rawValue": 3056,
            "value": 3056,
            "xCompareValue": [
              1293840000000,
              "B",
            ],
            "xDisplayValue": [
              "2011",
              "B",
            ],
            "xValue": [
              "2011-01-01T00:00:00.000Z",
              "B",
            ],
          },
          "name": "B",
          "parent": "2011-01-01T00:00:00.000Z",
          "value": 3056,
        },
        {
          "color": "rgb(77.647% 77.647% 100%)",
          "custom": {
            "blur": undefined,
            "level": 2,
            "levelsCount": 2,
            "rawValue": 8423,
            "value": 8423,
            "xCompareValue": [
              1325376000000,
              "B",
            ],
            "xDisplayValue": [
              "2012",
              "B",
            ],
            "xValue": [
              "2012-01-01T00:00:00.000Z",
              "B",
            ],
          },
          "name": "B",
          "parent": "2012-01-01T00:00:00.000Z",
          "value": 8423,
        },
        {
          "color": "rgb(42.353% 42.353% 59.216%)",
          "custom": {
            "blur": undefined,
            "level": 2,
            "levelsCount": 2,
            "rawValue": 2045,
            "value": 2045,
            "xCompareValue": [
              1356998400000,
              undefined,
            ],
            "xDisplayValue": [
              "2013",
              "A",
            ],
            "xValue": [
              "2013-01-01T00:00:00.000Z",
              "A",
            ],
          },
          "name": "A",
          "parent": "2013-01-01T00:00:00.000Z",
          "value": 2045,
        },
        {
          "color": "rgb(77.647% 77.647% 100%)",
          "custom": {
            "blur": undefined,
            "level": 2,
            "levelsCount": 2,
            "rawValue": 3010,
            "value": 3010,
            "xCompareValue": [
              1388534400000,
              undefined,
            ],
            "xDisplayValue": [
              "2014",
              "B",
            ],
            "xValue": [
              "2014-01-01T00:00:00.000Z",
              "B",
            ],
          },
          "name": "B",
          "parent": "2014-01-01T00:00:00.000Z",
          "value": 3010,
        },
        {
          "color": "rgb(42.353% 42.353% 59.216%)",
          "custom": {
            "blur": undefined,
            "level": 2,
            "levelsCount": 2,
            "rawValue": 5447,
            "value": 5447,
            "xCompareValue": [
              1420070400000,
              undefined,
            ],
            "xDisplayValue": [
              "2015",
              "A",
            ],
            "xValue": [
              "2015-01-01T00:00:00.000Z",
              "A",
            ],
          },
          "name": "A",
          "parent": "2015-01-01T00:00:00.000Z",
          "value": 5447,
        },
        {
          "color": "rgb(77.647% 77.647% 100%)",
          "custom": {
            "blur": undefined,
            "level": 2,
            "levelsCount": 2,
            "rawValue": 4242,
            "value": 4242,
            "xCompareValue": [
              1451606400000,
              undefined,
            ],
            "xDisplayValue": [
              "2016",
              "B",
            ],
            "xValue": [
              "2016-01-01T00:00:00.000Z",
              "B",
            ],
          },
          "name": "B",
          "parent": "2016-01-01T00:00:00.000Z",
          "value": 4242,
        },
        {
          "color": "rgb(77.647% 77.647% 100%)",
          "custom": {
            "blur": undefined,
            "level": 2,
            "levelsCount": 2,
            "rawValue": 936,
            "value": 936,
            "xCompareValue": [
              1514764800000,
              undefined,
            ],
            "xDisplayValue": [
              "2018",
              "B",
            ],
            "xValue": [
              "2018-01-01T00:00:00.000Z",
              "B",
            ],
          },
          "name": "B",
          "parent": "2018-01-01T00:00:00.000Z",
          "value": 936,
        },
      ],
      "dataLabels": {
        "style": {
          "textOutline": "none",
        },
      },
      "levels": [
        {
          "color": "#FFFFFF",
          "dataLabels": {
            "className": "!csdk-overflow-visible",
            "enabled": true,
            "formatter": [Function],
            "useHTML": true,
          },
          "level": 1,
          "levelSize": {
            "unit": "percentage",
            "value": 70,
          },
        },
        {
          "dataLabels": {
            "enabled": false,
            "formatter": [Function],
            "useHTML": true,
          },
          "level": 2,
        },
        {
          "dataLabels": {
            "enabled": false,
            "formatter": [Function],
            "useHTML": true,
          },
          "level": 3,
        },
      ],
      "name": "Root",
      "showInLegend": false,
      "turboThreshold": 2000,
      "type": "sunburst",
    },
    {
      "color": "#00cee6",
      "data": [],
      "name": "Years",
      "showInLegend": true,
      "states": {
        "hover": {
          "enabled": false,
        },
      },
    },
    {
      "color": "#9b9bd7",
      "data": [],
      "name": "Group",
      "showInLegend": true,
      "states": {
        "hover": {
          "enabled": false,
        },
      },
    },
  ],
  "title": {
    "text": null,
  },
  "tooltip": {
    "animation": false,
    "backgroundColor": "#FFFFFF",
    "borderColor": "#CCCCCC",
    "borderRadius": 10,
    "borderWidth": 1,
    "formatter": [Function],
    "outside": true,
    "padding": 1,
    "style": {
      "fontFamily": ""Open Sans","Roboto","Helvetica","Arial",sans-serif",
    },
    "useHTML": true,
  },
  "xAxis": undefined,
  "yAxis": undefined,
}
`;

exports[`Sunburst Chart > render a sunburst with two categories and legend 1`] = `
{
  "accessibility": {
    "enabled": false,
  },
  "boost": {
    "useGPUTranslations": true,
    "usePreAllocated": true,
  },
  "chart": {
    "alignTicks": false,
    "animation": {
      "duration": 300,
    },
    "backgroundColor": "#FFFFFF",
    "events": {
      "drilldown": [Function],
      "redraw": [Function],
    },
    "polar": false,
    "spacing": [
      20,
      20,
      20,
      20,
    ],
    "type": "sunburst",
  },
  "drilldown": {
    "activeDataLabelStyle": {
      "color": "#000000",
    },
    "breadcrumbs": {
      "buttonTheme": {
        "fill": "#ffcb05",
        "states": {
          "hover": {
            "fill": "#f2b900",
            "stroke": "#f2b900",
          },
        },
        "stroke": "#ffcb05",
        "style": {
          "color": "#3a4356",
        },
      },
    },
  },
  "legend": {
    "align": "center",
    "backgroundColor": "transparent",
    "borderColor": "transparent",
    "borderWidth": 0,
    "enabled": true,
    "itemStyle": {
      "color": "#000000",
      "fontFamily": ""Open Sans","Roboto","Helvetica","Arial",sans-serif",
      "fontSize": "13px",
      "fontWeight": "normal",
      "pointerEvents": "auto",
      "textOutline": "none",
    },
    "layout": "horizontal",
    "symbolRadius": 0,
    "verticalAlign": "bottom",
  },
  "plotOptions": {
    "series": {
      "animation": {
        "duration": 600,
      },
      "dataLabels": {
        "style": {
          "color": "#000000",
          "fontFamily": ""Open Sans","Roboto","Helvetica","Arial",sans-serif",
        },
      },
      "point": {
        "events": {
          "click": [Function],
        },
      },
    },
    "sunburst": {
      "events": {
        "legendItemClick": [Function],
      },
    },
  },
  "series": [
    {
      "borderWidth": 0,
      "data": [
        {
          "custom": {
            "level": 0,
            "levelsCount": 2,
          },
          "id": "SUNBURST_ROOT_PARENT_ID",
          "name": "Quantity",
        },
        {
          "color": "rgb(10.196% 90.588% 100%)",
          "custom": {
            "level": 1,
            "levelsCount": 2,
            "rawValues": [
              "2018-01-01T00:00:00.000Z",
            ],
            "subtotalValue": 936,
            "xValues": [
              "2018",
            ],
          },
          "id": "2018-01-01T00:00:00.000Z",
          "name": "2018",
          "parent": "SUNBURST_ROOT_PARENT_ID",
        },
        {
          "color": "rgb(8.8898% 86.166% 95.225%)",
          "custom": {
            "level": 1,
            "levelsCount": 2,
            "rawValues": [
              "2013-01-01T00:00:00.000Z",
            ],
            "subtotalValue": 2045,
            "xValues": [
              "2013",
            ],
          },
          "id": "2013-01-01T00:00:00.000Z",
          "name": "2013",
          "parent": "SUNBURST_ROOT_PARENT_ID",
        },
        {
          "color": "rgb(7.5634% 81.786% 90.495%)",
          "custom": {
            "level": 1,
            "levelsCount": 2,
            "rawValues": [
              "2014-01-01T00:00:00.000Z",
            ],
            "subtotalValue": 3010,
            "xValues": [
              "2014",
            ],
          },
          "id": "2014-01-01T00:00:00.000Z",
          "name": "2014",
          "parent": "SUNBURST_ROOT_PARENT_ID",
        },
        {
          "color": "rgb(6.2054% 77.449% 85.811%)",
          "custom": {
            "level": 1,
            "levelsCount": 2,
            "rawValues": [
              "2011-01-01T00:00:00.000Z",
            ],
            "subtotalValue": 3056,
            "xValues": [
              "2011",
            ],
          },
          "id": "2011-01-01T00:00:00.000Z",
          "name": "2011",
          "parent": "SUNBURST_ROOT_PARENT_ID",
        },
        {
          "color": "rgb(4.797% 73.157% 81.175%)",
          "custom": {
            "level": 1,
            "levelsCount": 2,
            "rawValues": [
              "2016-01-01T00:00:00.000Z",
            ],
            "subtotalValue": 4242,
            "xValues": [
              "2016",
            ],
          },
          "id": "2016-01-01T00:00:00.000Z",
          "name": "2016",
          "parent": "SUNBURST_ROOT_PARENT_ID",
        },
        {
          "color": "rgb(3.3319% 68.912% 76.588%)",
          "custom": {
            "level": 1,
            "levelsCount": 2,
            "rawValues": [
              "2015-01-01T00:00:00.000Z",
            ],
            "subtotalValue": 5447,
            "xValues": [
              "2015",
            ],
          },
          "id": "2015-01-01T00:00:00.000Z",
          "name": "2015",
          "parent": "SUNBURST_ROOT_PARENT_ID",
        },
        {
          "color": "rgb(2.0254% 64.715% 72.051%)",
          "custom": {
            "level": 1,
            "levelsCount": 2,
            "rawValues": [
              "2010-01-01T00:00:00.000Z",
            ],
            "subtotalValue": 6814,
            "xValues": [
              "2010",
            ],
          },
          "id": "2010-01-01T00:00:00.000Z",
          "name": "2010",
          "parent": "SUNBURST_ROOT_PARENT_ID",
        },
        {
          "color": "rgb(0.9193% 60.567% 67.567%)",
          "custom": {
            "level": 1,
            "levelsCount": 2,
            "rawValues": [
              "2009-01-01T00:00:00.000Z",
            ],
            "subtotalValue": 8103,
            "xValues": [
              "2009",
            ],
          },
          "id": "2009-01-01T00:00:00.000Z",
          "name": "2009",
          "parent": "SUNBURST_ROOT_PARENT_ID",
        },
        {
          "color": "rgb(0% 56.471% 63.137%)",
          "custom": {
            "level": 1,
            "levelsCount": 2,
            "rawValues": [
              "2012-01-01T00:00:00.000Z",
            ],
            "subtotalValue": 8423,
            "xValues": [
              "2012",
            ],
          },
          "id": "2012-01-01T00:00:00.000Z",
          "name": "2012",
          "parent": "SUNBURST_ROOT_PARENT_ID",
        },
        {
          "color": "rgb(42.353% 42.353% 59.216%)",
          "custom": {
            "blur": undefined,
            "level": 2,
            "levelsCount": 2,
            "rawValue": 8103,
            "value": 8103,
            "xCompareValue": [
              1230768000000,
              "A",
            ],
            "xDisplayValue": [
              "2009",
              "A",
            ],
            "xValue": [
              "2009-01-01T00:00:00.000Z",
              "A",
            ],
          },
          "name": "A",
          "parent": "2009-01-01T00:00:00.000Z",
          "value": 8103,
        },
        {
          "color": "rgb(42.353% 42.353% 59.216%)",
          "custom": {
            "blur": undefined,
            "level": 2,
            "levelsCount": 2,
            "rawValue": 6814,
            "value": 6814,
            "xCompareValue": [
              1262304000000,
              "A",
            ],
            "xDisplayValue": [
              "2010",
              "A",
            ],
            "xValue": [
              "2010-01-01T00:00:00.000Z",
              "A",
            ],
          },
          "name": "A",
          "parent": "2010-01-01T00:00:00.000Z",
          "value": 6814,
        },
        {
          "color": "rgb(77.647% 77.647% 100%)",
          "custom": {
            "blur": undefined,
            "level": 2,
            "levelsCount": 2,
            "rawValue": 3056,
            "value": 3056,
            "xCompareValue": [
              1293840000000,
              "B",
            ],
            "xDisplayValue": [
              "2011",
              "B",
            ],
            "xValue": [
              "2011-01-01T00:00:00.000Z",
              "B",
            ],
          },
          "name": "B",
          "parent": "2011-01-01T00:00:00.000Z",
          "value": 3056,
        },
        {
          "color": "rgb(77.647% 77.647% 100%)",
          "custom": {
            "blur": undefined,
            "level": 2,
            "levelsCount": 2,
            "rawValue": 8423,
            "value": 8423,
            "xCompareValue": [
              1325376000000,
              "B",
            ],
            "xDisplayValue": [
              "2012",
              "B",
            ],
            "xValue": [
              "2012-01-01T00:00:00.000Z",
              "B",
            ],
          },
          "name": "B",
          "parent": "2012-01-01T00:00:00.000Z",
          "value": 8423,
        },
        {
          "color": "rgb(42.353% 42.353% 59.216%)",
          "custom": {
            "blur": undefined,
            "level": 2,
            "levelsCount": 2,
            "rawValue": 2045,
            "value": 2045,
            "xCompareValue": [
              1356998400000,
              undefined,
            ],
            "xDisplayValue": [
              "2013",
              "A",
            ],
            "xValue": [
              "2013-01-01T00:00:00.000Z",
              "A",
            ],
          },
          "name": "A",
          "parent": "2013-01-01T00:00:00.000Z",
          "value": 2045,
        },
        {
          "color": "rgb(77.647% 77.647% 100%)",
          "custom": {
            "blur": undefined,
            "level": 2,
            "levelsCount": 2,
            "rawValue": 3010,
            "value": 3010,
            "xCompareValue": [
              1388534400000,
              undefined,
            ],
            "xDisplayValue": [
              "2014",
              "B",
            ],
            "xValue": [
              "2014-01-01T00:00:00.000Z",
              "B",
            ],
          },
          "name": "B",
          "parent": "2014-01-01T00:00:00.000Z",
          "value": 3010,
        },
        {
          "color": "rgb(42.353% 42.353% 59.216%)",
          "custom": {
            "blur": undefined,
            "level": 2,
            "levelsCount": 2,
            "rawValue": 5447,
            "value": 5447,
            "xCompareValue": [
              1420070400000,
              undefined,
            ],
            "xDisplayValue": [
              "2015",
              "A",
            ],
            "xValue": [
              "2015-01-01T00:00:00.000Z",
              "A",
            ],
          },
          "name": "A",
          "parent": "2015-01-01T00:00:00.000Z",
          "value": 5447,
        },
        {
          "color": "rgb(77.647% 77.647% 100%)",
          "custom": {
            "blur": undefined,
            "level": 2,
            "levelsCount": 2,
            "rawValue": 4242,
            "value": 4242,
            "xCompareValue": [
              1451606400000,
              undefined,
            ],
            "xDisplayValue": [
              "2016",
              "B",
            ],
            "xValue": [
              "2016-01-01T00:00:00.000Z",
              "B",
            ],
          },
          "name": "B",
          "parent": "2016-01-01T00:00:00.000Z",
          "value": 4242,
        },
        {
          "color": "rgb(77.647% 77.647% 100%)",
          "custom": {
            "blur": undefined,
            "level": 2,
            "levelsCount": 2,
            "rawValue": 936,
            "value": 936,
            "xCompareValue": [
              1514764800000,
              undefined,
            ],
            "xDisplayValue": [
              "2018",
              "B",
            ],
            "xValue": [
              "2018-01-01T00:00:00.000Z",
              "B",
            ],
          },
          "name": "B",
          "parent": "2018-01-01T00:00:00.000Z",
          "value": 936,
        },
      ],
      "dataLabels": {
        "style": {
          "textOutline": "none",
        },
      },
      "levels": [
        {
          "color": "#FFFFFF",
          "dataLabels": {
            "className": "!csdk-overflow-visible",
            "enabled": true,
            "formatter": [Function],
            "useHTML": true,
          },
          "level": 1,
          "levelSize": {
            "unit": "percentage",
            "value": 70,
          },
        },
        {
          "dataLabels": {
            "enabled": false,
            "formatter": [Function],
            "useHTML": true,
          },
          "level": 2,
        },
        {
          "dataLabels": {
            "enabled": false,
            "formatter": [Function],
            "useHTML": true,
          },
          "level": 3,
        },
      ],
      "name": "Root",
      "showInLegend": false,
      "turboThreshold": 2000,
      "type": "sunburst",
    },
    {
      "color": "#00cee6",
      "data": [],
      "name": "Years",
      "showInLegend": true,
      "states": {
        "hover": {
          "enabled": false,
        },
      },
    },
    {
      "color": "#9b9bd7",
      "data": [],
      "name": "Group",
      "showInLegend": true,
      "states": {
        "hover": {
          "enabled": false,
        },
      },
    },
  ],
  "title": {
    "text": null,
  },
  "tooltip": {
    "animation": false,
    "backgroundColor": "#FFFFFF",
    "borderColor": "#CCCCCC",
    "borderRadius": 10,
    "borderWidth": 1,
    "formatter": [Function],
    "outside": true,
    "padding": 1,
    "style": {
      "fontFamily": ""Open Sans","Roboto","Helvetica","Arial",sans-serif",
    },
    "useHTML": true,
  },
  "xAxis": undefined,
  "yAxis": undefined,
}
`;
